force-app/main/default/objects/Raw_Sales_Data__c/Raw_Sales_Data__c.object-meta.xml
<CustomObject>
    <label>Raw Sales Data</label>
    <nameField>
        <displayFormat>RS- {00000000}</displayFormat>
        <label>Raw Sales Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Raw Sales Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>