force-app/main/default/objects/Raw_Sales_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Raw Sales Data</relationshipLabel>
    <relationshipName>Raw_Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>