force-app/main/default/objects/Raw_Sales_Data__c/fields/Actual_Unit__c.field-meta.xml
<CustomField>
    <fullName>Actual_Unit__c</fullName>
    <label>Actual Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>