force-app/main/default/objects/Raw_Sales_Data__c/fields/Actual_Unit_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Actual_Unit_Decimal__c</fullName>
    <formula>VALUE(Actual_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Unit Decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>