force-app/main/default/objects/Raw_Sales_Data__c/fields/Admin_Forced_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Admin_Forced_Account_Id__c</fullName>
    <label>Admin Forced Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>