force-app/main/default/objects/Raw_Sales_Data__c/fields/Admin_Forced_Account_Match__c.field-meta.xml
<CustomField>
    <fullName>Admin_Forced_Account_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin Forced Account Match</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Raw Sales Data (Admin Forced Account Match)</relationshipLabel>
    <relationshipName>Raw_Sales_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>