force-app/main/default/objects/Raw_Sales_Data__c/fields/Admin_Forced_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_Forced_Account_Name__c</fullName>
    <label>Admin Forced Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>