force-app/main/default/objects/Raw_Sales_Data__c/fields/Admin_Forced_Plant_Product_Match__c.field-meta.xml
<CustomField>
    <fullName>Admin_Forced_Plant_Product_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin Forced Plant Product Match</label>
    <referenceTo>Plant_Products__c</referenceTo>
    <relationshipLabel>Raw Sales Data (Admin Forced Plant Product Match)</relationshipLabel>
    <relationshipName>Raw_Sales_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>