force-app/main/default/objects/Raw_Sales_Data__c/fields/Admin_Forced_Plant_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_Forced_Plant_Product_Name__c</fullName>
    <label>Admin Forced Plant Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>