force-app/main/default/objects/Raw_Sales_Data__c/fields/Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Billing_System__c</fullName>
    <label>Business Unit Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acclaim</fullName>
            </value>
            <value>
                <fullName>Commercial Print</fullName>
            </value>
            <value>
                <fullName>DLI</fullName>
            </value>
            <value>
                <fullName>Envelope</fullName>
            </value>
            <value>
                <fullName>Express Labels</fullName>
            </value>
            <value>
                <fullName>Labels &amp; Packaging</fullName>
            </value>
            <value>
                <fullName>Lancer</fullName>
            </value>
            <value>
                <fullName>Lightning Labels</fullName>
            </value>
            <value>
                <fullName>Maverick Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>