force-app/main/default/objects/Raw_Sales_Data__c/fields/BU_Name__c.field-meta.xml
<CustomField>
    <fullName>BU_Name__c</fullName>
    <formula>TEXT(Billing_System__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU Name</label>
    <type>Text</type>
</CustomField>