force-app/main/default/objects/Raw_Sales_Data__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>