force-app/main/default/objects/Raw_Sales_Data__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Plant Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acclaim</fullName>
            </value>
            <value>
                <fullName>DLI</fullName>
            </value>
            <value>
                <fullName>Express Labels</fullName>
            </value>
            <value>
                <fullName>Lightining Labels</fullName>
            </value>
            <value>
                <fullName>Maverick Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>