force-app/main/default/objects/Raw_Sales_Data__c/fields/Buyout_Resale_Actual_Units__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Resale_Actual_Units__c</fullName>
    <label>Buyout/Resale Actual Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>