force-app/main/default/objects/Raw_Sales_Data__c/fields/ENV_1st_Pass_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>ENV_1st_Pass_Budget_Amount__c</fullName>
    <label>ENV - 1st Pass Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>