force-app/main/default/objects/Raw_Sales_Data__c/fields/Error_In_Processing__c.field-meta.xml
<CustomField>
    <fullName>Error_In_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error In Processing</label>
    <type>Checkbox</type>
</CustomField>