force-app/main/default/objects/Raw_Sales_Data__c/fields/GM__c.field-meta.xml
<CustomField>
    <fullName>GM__c</fullName>
    <label>GM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>