force-app/main/default/objects/Raw_Sales_Data__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mgr Group</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Raw_Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>