force-app/main/default/objects/Raw_Sales_Data__c/fields/Manufactured_Actual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Actual_Sales__c</fullName>
    <label>Manufactured Actual Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>