force-app/main/default/objects/Raw_Sales_Data__c/fields/Manufactured_Actual_Units__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Actual_Units__c</fullName>
    <label>Manufactured Actual Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>