force-app/main/default/objects/Raw_Sales_Data__c/fields/Manufactured_Budget_Units__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Budget_Units__c</fullName>
    <label>Manufactured Budget Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>