force-app/main/default/objects/Raw_Sales_Data__c/fields/Match_Success_Log__c.field-meta.xml
<CustomField>
    <fullName>Match_Success_Log__c</fullName>
    <label>Match Success Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>