force-app/main/default/objects/Raw_Sales_Data__c/fields/Moved_to_Sales_Data__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Sales_Data__c</fullName>
    <label>Moved to Sales Data</label>
    <type>DateTime</type>
</CustomField>