force-app/main/default/objects/Raw_Sales_Data__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Raw Sales Data</relationshipLabel>
    <relationshipName>Raw_Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>