force-app/main/default/objects/Raw_Sales_Data__c/fields/Plant_Product__c.field-meta.xml
<CustomField>
    <fullName>Plant_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Product</label>
    <referenceTo>Plant_Products__c</referenceTo>
    <relationshipLabel>Raw Sales Data</relationshipLabel>
    <relationshipName>Raw_Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>