force-app/main/default/objects/Raw_Sales_Data__c/fields/Sales_Data__c.field-meta.xml
<CustomField>
    <fullName>Sales_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Data</label>
    <referenceTo>Sales_Data__c</referenceTo>
    <relationshipLabel>Raw Sales Data</relationshipLabel>
    <relationshipName>Raw_Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>