force-app/main/default/objects/Raw_Sales_Data__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Raw_Sales_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>