force-app/main/default/objects/Raw_Sales_Data__c/fields/Shipped_Not_Billed_Unit__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Not_Billed_Unit__c</fullName>
    <label>Shipped Not Billed Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>