force-app/main/default/objects/Raw_Sales_Data__c/fields/SNB__c.field-meta.xml
<CustomField>
    <fullName>SNB__c</fullName>
    <label>SNB $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>